--- a/META.yml
+++ b/META.yml
@@ -1,10 +1,19 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         Math-MatrixReal
-version:      2.02
-version_from: MatrixReal.pm
-installdirs:  site
-requires:
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.30
+---
+name: Math-MatrixReal
+version: 2.03
+author:
+  - 'Jonathan Leto <jonathan@leto.net>'
+abstract: Manipulate NxN matrices of real numbers
+license: perl
+resources:
+  license: http://dev.perl.org/licenses/
+build_requires:
+  Test::More: 0
+provides:
+  Math::MatrixReal:
+    file: lib/Math/MatrixReal.pm
+    version: 2.03
+generated_by: Module::Build version 0.280801
+meta-spec:
+  url: http://module-build.sourceforge.net/META-spec-v1.2.html
+  version: 1.2
